force-app/main/default/objects/Due_Diligence_Partner__c/Due_Diligence_Partner__c.object-meta.xml
<CustomObject>
    <label>Due Diligence Partner</label>
    <nameField>
        <displayFormat>DD-{000000}</displayFormat>
        <label>DD No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>