force-app/main/default/objects/Due_Diligence_Partner__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Due Diligence Partners</relationshipLabel>
    <relationshipName>Due_Diligence_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>