force-app/main/default/objects/Due_Diligence_Partner__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Comps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>