force-app/main/default/objects/Due_Diligence_Partner__c/fields/Hired__c.field-meta.xml
<CustomField>
    <fullName>Hired__c</fullName>
    <label>Hired</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>