force-app/main/default/objects/Due_Diligence_Partner__c/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Due Diligence Partners (Lead Consultant)</relationshipLabel>
    <relationshipName>Due_Diligence_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>