force-app/main/default/objects/Due_Diligence_Partner__c/fields/Reason_Not_Hired__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Hired__c</fullName>
    <label>Reason - Not Hired</label>
    <type>TextArea</type>
</CustomField>