force-app/main/default/objects/Due_Diligence_Partner__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Diligence Projects</relationshipLabel>
    <relationshipName>Due_Diligence_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>