force-app/main/default/objects/Due_Diligence_Partner__c/fields/Vendor_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Due Diligence Projects</relationshipLabel>
    <relationshipName>Due_Diligence_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>