force-app/main/default/objects/Due_Diligence_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Domain__c</columns>
    <columns>Vendor__c</columns>
    <columns>Fees__c</columns>
    <columns>Hired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>